Banner: Fix button spacing

--- a/scss/components/_banners.scss
+++ b/scss/components/_banners.scss
@@ -42,10 +42,6 @@
 		display: flex;
 		gap: 8px;
 		margin-inline-start: auto;
-		
-		button {
-			margin: 0;
-		}
 	}
 }
 
